--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>Harbola is a recitation organization established in Dhaka, Bangladesh. It is a reknowed institute for practicing Bangla recitation through nationwide.</p>
-						<a class="my-button" target="_blank" href="http://harbola.imfast.io">Visit Website</a>
+						<a class="my-button" target="_blank" href="http://harbola.epizy.com">Visit Website</a>
 					</div>
 				</div>
 			</div>
